--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "reflect-metadata": "^0.1.13",
     "request": "^2.88.2",
     "rxjs": "~6.5.4",
+    "unfluff": "^3.2.0",
     "zone.js": "^0.10.2"
   },
   "devDependencies": {
