--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@nrwl/angular": "9.2.4",
     "axios": "^0.19.2",
     "core-js": "^2.5.4",
+    "lodash": "^4.17.15",
     "node-cache": "^5.1.0",
     "node-html-parser": "^1.2.16",
     "reflect-metadata": "^0.1.13",
